# spotipyn

./: .dockerignore  .env.example  .env_example  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  build-app.sh  config.default.yml  config.example.yml  config.yml  docker-compose.default.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  spotipyn.py
.github/workflows/: docker-publish.yml
Test cases+results/: Player test + overview of tests.txt
Test cases+results/loginTest/: loginTest.java
Test cases+results/pinTest/: pinTest.java
Test cases+results/playlistTest/: playlistTest.java
Test cases+results/signOutTest/: signOutTest.java
api/: models.py  serializer.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/utils/: config.py  database.py
modules/: __init__.py
modules/Pin/: Pin.py
modules/database/: database.py
modules/login/: login.py
modules/login/templates/: login.html  redirect.html
modules/logout/: logout.py
modules/pin/: pin.py
modules/pin/templates/: edit.html  pin.html
modules/player/: player.py
modules/player/templates/: player.html
modules/playlist/: playlist.py
modules/playlist/templates/: playlist.html
modules/static/css/: pin.css  pins.css  player.css  style.css
modules/static/js/: pins.js  player.js  togglesidebar.js
modules/templates/: base.html
spotipyn/: asgi.py  settings.py  urls.py  wsgi.py
spotipyn/utils/: config.py  database.py
static/: style.css
templates/: index.html  login.html  style.css
utils/: auth.py  config.py  database.py  user_template.py
(+5 files in other folders)
