[tool.poetry]
name = "spotipyn"
version = "1.0.0"
description = "A Spotify-based web application."
license = "MIT License"
authors = ["Mint <developer@chocomint.dev>"]
maintainers = ["Mint <developer@chocomint.dev>"]
readme = "README.md"
repository = "https://github.com/lunarmint/spotipyn"

[tool.poetry.dependencies]
coloredlogs = "15.0.1"
django = "^4.1.6"
pyaml_env = "1.2.1"
pymongo = "4.3.3"
python = "^3.11"

[tool.poetry.dev-dependencies]
black = ">=23.1.0"
flake8 = ">=6.0.0"

[tool.black]
line-length = 125

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
