[tool.poetry]
name = "spotipyn"
version = "1.0.0"
description = "A Spotify-based web application."
license = "MIT License"
authors = ["Mint <developer@chocomint.dev>"]
maintainers = ["Mint <developer@chocomint.dev>"]
readme = "README.md"
repository = "https://github.com/lunarmint/spotipyn"

[tool.poetry.dependencies]
confuse = "2.0.0"
django = "^4.1.7"
djangorestframework = "3.14.0"
psycopg2 = "2.9.5"
python = "^3.11"

[tool.poetry.dev-dependencies]
black = ">=23.1.0"
flake8 = ">=6.0.0"

[tool.black]
line-length = 125

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
